fix blockquote styling; update namespacing ug

--- a/docs/css/customstyles.css
+++ b/docs/css/customstyles.css
@@ -308,6 +308,47 @@ a.accordion-toggle, a.accordion-collapsed {
     text-decoration: none;
 }
 
+code {
+    letter-spacing: 1px;
+}
+
+/* asciidoc quotes */
+.quoteblock, .verseblock {
+    background: #fafafa;
+    background: var(--quote-background);
+    border-left: 5px solid #5d5d5d;
+    border-left: 5px solid var(--quote-border-color);
+    color: #5d5d5d;
+    color: var(--quote-font-color);
+}
+.quoteblock {
+    padding: .25rem 2rem 1.25rem;
+    margin-bottom: 1rem;
+}
+.quoteblock .attribution {
+    color: #8e8e8e;
+    color: var(--quote-attribution-font-color);
+    font-size: .83333rem;
+    font-size: calc(15/var(--rem-base)*1rem);
+    margin-top: .75rem;
+}
+.quoteblock blockquote {
+    margin-top: 1rem;
+}
+blockquote {
+    margin: 0;
+    border-left: none;
+    padding:0;
+}
+
+/* asciidoc 'sidebar' */
+.sidebarblock {
+    background: #e1e1e1;
+    background: var(--sidebar-background);
+    border-radius: .75rem;
+    padding: .75rem 1.5rem;
+}
+
 .navlist {
     padding-bottom: 2em !important;
 }
@@ -412,10 +453,9 @@ div#tg-sb-sidebar  {
     top:70px !important;
 }
 
-/* div#tg-sb-content.col-md-9 { */
-/*     top:50px; */
-/*     overflow-y: scroll; */
-/* } */
+div#tg-sb-content.col-md-9 {
+    margin-bottom: 2em;
+}
 
 html {
     scroll-behavior: smooth;
